# sparkinfer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: COPYCATS.md  FLAGGED.md  blocked-contributors.txt  copycats.json
bench/quality/: fetch.py
bench/quality/data/: bfcl.jsonl  gsm8k.jsonl  humaneval.jsonl  ifeval.jsonl  mmlu_pro.jsonl
bench/quality/results/quality_25_20260703/: llama_25pct.jsonl  sparkinfer_25pct.jsonl  vllm_awq_25pct.jsonl
bench/quality/seed_hand_authored/: bfcl.jsonl  gsm8k.jsonl  humaneval.jsonl  ifeval.jsonl  mmlu_pro.jsonl
bench/scripts/: evaluate_dual.sh
csrc/cuda/attention/: CMakeLists.txt  flash_decode.cu  rope.cu
csrc/cuda/fused/: CMakeLists.txt  model_ops.cu
csrc/cuda/gemm/: CMakeLists.txt  gemm.cu
csrc/cuda/moe/: CMakeLists.txt
csrc/cuda/quant/: CMakeLists.txt
dashboard/: data.js  data.json  index.html
eval/: pr_eval_bot.py
include/blackwell/kernels/: attention.h  gemm.h  moe.h
include/sparkinfer/kernels/: attention.h  fused.h  gemm.h
kernels/csrc/cuda/attention/: flash_decode_split.cu  rope.cu
kernels/csrc/cuda/moe/: expert_ffn_q4k.cu
kernels/include/sparkinfer/kernels/: attention.h
runtime/examples/: qwen3_gguf_bench.cpp  qwen3_gguf_generate.cpp  qwen3_gguf_score.cpp
runtime/src/models/: qwen35.cpp
